@@ -34,7 +34,7 @@ $global:SECMGR = Get-Env-Boolean SECMGR $false
 $global:DEBUG_MODE=Get-Env DEBUG $false
 $global:DEBUG_PORT=Get-Env DEBUG_PORT 8787
 $global:RUN_IN_BACKGROUND=$false
-$global:GC_LOG=$false
+$GC_LOG=Get-Env GC_LOG
 #module opts that are passed to jboss modules
 $global:MODULE_OPTS = @()
 
@@ -62,7 +62,14 @@ Function String-To-Array($value) {
 }
 
 Function Display-Environment {
-$JAVA_OPTS = Get-Java-Opts
+Param(
+   [string[]]$javaOpts
+) #end param
+
+if (-Not $javaOpts){
+	$javaOpts = Get-Java-Opts
+}
+
 # Display our environment
 Write-Host "================================================================================="
 Write-Host ""
@@ -74,7 +81,7 @@ Write-Host "  JAVA: $JAVA"
 Write-Host ""
 Write-Host "  MODULE_OPTS: $MODULE_OPTS"
 Write-Host ""
-Write-Host "  JAVA_OPTS: $JAVA_OPTS"
+Write-Host "  JAVA_OPTS: $javaOpts"
 Write-Host ""
 Write-Host "================================================================================="
 Write-Host ""
@@ -127,6 +134,24 @@ Param(
   $PROG_ARGS += "-Djboss.home.dir=$JBOSS_HOME"
   $PROG_ARGS += "-Djboss.server.base.dir=$global:JBOSS_BASE_DIR"
   $PROG_ARGS += "-Djboss.server.config.dir=$global:JBOSS_CONFIG_DIR"
+
+  if ($GC_LOG -eq $true){
+    if ($PROG_ARGS -notcontains "-verbose:gc"){
+        Rotate-GC-Logs
+		if (-not(Test-Path $JBOSS_LOG_DIR)) {
+			$dir = New-Item $JBOSS_LOG_DIR -type directory -ErrorAction SilentlyContinue
+		}
+        $PROG_ARGS += "-verbose:gc"
+        $PROG_ARGS += "-XX:+PrintGCDetails"
+        $PROG_ARGS += "-XX:+PrintGCDateStamps"
+        $PROG_ARGS += "-XX:+UseGCLogFileRotation"
+        $PROG_ARGS += "-XX:NumberOfGCLogFiles=5"
+        $PROG_ARGS += "-XX:GCLogFileSize=3M"
+        $PROG_ARGS += "-XX:-TraceClassUnloading"
+        $PROG_ARGS += "-Xloggc:$JBOSS_LOG_DIR\gc.log"
+    }
+  }
+  $global:FINAL_JAVA_OPTS = $PROG_ARGS
 
   $PROG_ARGS += "-jar"
   $PROG_ARGS += "$JBOSS_HOME\jboss-modules.jar"
@@ -258,7 +283,7 @@ Function Rotate-GC-Logs {
 }
 
 Function Check-For-GC-Log {
-	if ($global:GC_LOG){
+	if (GC_LOG){
 		$args = (,'-verbose:gc',"-Xloggc:$JBOSS_LOG_DIR/gc.log","-XX:+PrintGCDetails","-XX:+PrintGCDateStamps","-XX:+UseGCLogFileRotation","-XX:NumberOfGCLogFiles=5","-XX:GCLogFileSize=3M","-XX:-TraceClassUnloading",'-version')
 		$OutputVariable = (&$JAVA $args )  | Out-String
 	}
